objects/lightningbuddy__Url_Path_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>lightningbuddy__Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Query_String__c</fullName>
        <label>Query String</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightningbuddy__Url__c</fullName>
        <label>Url</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Url Path Mapping</label>
    <listViews>
        <fullName>lightningbuddy__All_with_Paths</fullName>
        <columns>lightningbuddy__Object__c</columns>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>lightningbuddy__Url__c</columns>
        <columns>lightningbuddy__Query_String__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with Paths</label>
    </listViews>
    <pluralLabel>Url Path Mappings</pluralLabel>
</CustomObject>